--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "scripts": {
     "test": "mocha"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/allan-stewart/node-json-tool.git"
+  },
   "keywords": [
     "json",
     "pretty",
